fix for style scoping on feed for overflow

--- a/app/static/sass/_activity.scss
+++ b/app/static/sass/_activity.scss
@@ -197,9 +197,20 @@
         white-space: pre;
     }
 
+    .e-feed-item:not(.m-blog-item) {
+        .e-feed-message {
+            max-width: 80%
+        }
+    }
+
+    .e-feed-item.m-blog-item {
+        .e-feed-message {
+            max-width: 100%
+        }
+    }
+
     .e-feed-message {
         flex: 1;               /* NEW, Spec - Firefox, Chrome, Opera */
-        max-width: 80%;
 
         p {
             margin: 10px 0;
